--- a/MherFrangulyan/First_project/index.html
+++ b/MherFrangulyan/First_project/index.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <html>
    <head>
+       <meta charset="utf-8">
        <title>Mher's project</title>
    </head>
    
-    <body></body>
+    <body>
+	    <div class="container"></div>
+	</body>
 <html>
