--- a/NellyHovhannisyan/FirstProject/index.html
+++ b/NellyHovhannisyan/FirstProject/index.html
@@ -1,1 +1,1 @@
-<DOCTYPE><html><head><title> </title></head><body></body></html>
+<!DOCTYPE html><html lang="en"><head>    <meta charset="UTF-8">    <!--this meta for comfortable IE-->    <meta http-equiv="X-UA-Compatible" content="IE=edge">    <!--this meta for devices /desktop tablet laptop mobile-->    <meta name="viewport" content="width=device-width, initial-scale=1">    <title>Home Page</title></head><body><div class="container"></div></body>
