--- a/TamaraMargaryan/First_project/index.html
+++ b/TamaraMargaryan/First_project/index.html
@@ -6,13 +6,13 @@
     <meta name="description" content="web design elements">
     <meta name="keywords" content="html, css, ukit, web design">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>UIKit</title>
+    <title>First Git project</title>
     <link rel="stylesheet" type="text/css" href="libs/css/styles.css">
    
 </head>
 	
     <body>
-
+       <h1>Welcome to the first Git Project</h1> 
     </body>
     
 </html>
