--- a/LilitBotoyan/First page/index.html
+++ b/LilitBotoyan/First page/index.html
@@ -1,11 +1,112 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title> /my First Page</title>
-    <link rel="stylesheet" href="/css/style.css" media="screen" >
-  </head>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="libs/css/style.css" rel="stylesheet" >
+  <title>My first Github page</title>
+</head>
+<body>
+<header>
+  <div class="header-logo" ><div class="logo">HTML</div><span class="num">5</span></div>
+  <div class="menu-x">
+    <ul>
+      <li><a href="#"> Link 1</a></li>
+      <li><a href="#"> Link 2</a></li>
+      <li><a href="#"> Link 3</a></li>
+      <li><a href="#"> Link 4</a></li>
+      <li><a href="#"> Link 5</a></li>
+    </ul>
+  </div>
+</header>
+<div class="container">
+  <div class="content-left">
+    <div class="section-blok">
+      <img src="libs/images/img.jpg">
+      <div class="section-block-content" >
+        <div class="section-block-header">
+          <h1>This is a Lorem Ipsum heading</h1>
+        </div>
+        <div class="text">
+          <p>Lorem Ipsum is simply dummy text of the printing
+            and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s,
+            Lorem Ipsum is simply dummy text of the printing
+          </p>
+        </div>
+        <div class="read">Read More...</div>
+      </div>
+    </div>
+    <div class="grey-bottom"></div>
+    <div class="section-blok">
+      <img src="libs/images/img.jpg">
+      <div class="section-block-content" >
+        <div class="section-block-header">
+          <h1>This is a Lorem Ipsum heading</h1>
+        </div>
+        <div class="text">
+          <p>Lorem Ipsum is simply dummy text of the printing
+            and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s,
+            Lorem Ipsum is simply dummy text of the printing
+          </p>
+        </div>
+        <div class="read">Read More...</div>
+      </div>
+    </div>
+    <div class="grey-bottom"></div>
+    <div class="section-blok">
+      <img src="libs/images/img.jpg">
+      <div class="section-block-content" >
+        <div class="section-block-header">
+          <h1>This is a Lorem Ipsum heading</h1>
+        </div>
+        <div class="text">
+          <p>Lorem Ipsum is simply dummy text of the printing
+            and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s,
+            Lorem Ipsum is simply dummy text of the printing
+          </p>
+        </div>
+        <div class="read">Read More...</div>
+      </div>
+    </div>
+    <div class="grey-bottom"></div>
+  </div>
+  <div class="content-right">
+    <h3>Sidbar Links</h3>
+    <div class="grey-bottom"></div>
+    <div class="menu-y">
+      <ul>
+        <li><a href="">Link 1</a></li>
+        <li><a href="">Link 2</a></li>
+        <li><a href="">Link 3</a></li>
+        <li><a href="">Link 4</a></li>
+      </ul>
+    </div>
+    <h3>Other Widgets</h3>
+    <div class="grey-bottom"></div>
+    <div class="text">
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy
+        text ever since the 1500s, Lorem Ipsum is simply dummy text of the printing
+      </p>
 
-  </body>
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy
+        text ever since the 1500s, Lorem Ipsum is simply dummy text of the printing
+      </p>
+
+    </div>
+  </div>
+</div>
+
+<footer>
+  <div class="text">Copyright<span class="read">YourSite.</span>All rights reserved.</div>
+</footer>
+</body>
 </html>
