--- a/LilitBotoyan/First page/index.html
+++ b/LilitBotoyan/First page/index.html
@@ -2,111 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="libs/css/style.css" rel="stylesheet" >
-  <title>My first Github page</title>
+  <title>My Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'
+        integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ'
+        crossorigin='anonymous'>
+  <link rel="stylesheet" href="libs/css/style.css">
 </head>
 <body>
 <header>
-  <div class="header-logo" ><div class="logo">HTML</div><span class="num">5</span></div>
-  <div class="menu-x">
+  <div class="logo">
+    <h3>Start Bootstrap</h3>
+  </div>
+  <div class="menu">
     <ul>
-      <li><a href="#"> Link 1</a></li>
-      <li><a href="#"> Link 2</a></li>
-      <li><a href="#"> Link 3</a></li>
-      <li><a href="#"> Link 4</a></li>
-      <li><a href="#"> Link 5</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="#"> About</a></li>
+      <li><a href="#">Services</a> </li>
+      <li><a href="#">Contact</a></li>
     </ul>
   </div>
 </header>
-<div class="container">
-  <div class="content-left">
-    <div class="section-blok">
-      <img src="libs/images/img.jpg">
-      <div class="section-block-content" >
-        <div class="section-block-header">
-          <h1>This is a Lorem Ipsum heading</h1>
-        </div>
-        <div class="text">
-          <p>Lorem Ipsum is simply dummy text of the printing
-            and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s,
-            Lorem Ipsum is simply dummy text of the printing
-          </p>
-        </div>
-        <div class="read">Read More...</div>
-      </div>
-    </div>
-    <div class="grey-bottom"></div>
-    <div class="section-blok">
-      <img src="libs/images/img.jpg">
-      <div class="section-block-content" >
-        <div class="section-block-header">
-          <h1>This is a Lorem Ipsum heading</h1>
-        </div>
-        <div class="text">
-          <p>Lorem Ipsum is simply dummy text of the printing
-            and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s,
-            Lorem Ipsum is simply dummy text of the printing
-          </p>
-        </div>
-        <div class="read">Read More...</div>
-      </div>
-    </div>
-    <div class="grey-bottom"></div>
-    <div class="section-blok">
-      <img src="libs/images/img.jpg">
-      <div class="section-block-content" >
-        <div class="section-block-header">
-          <h1>This is a Lorem Ipsum heading</h1>
-        </div>
-        <div class="text">
-          <p>Lorem Ipsum is simply dummy text of the printing
-            and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s,
-            Lorem Ipsum is simply dummy text of the printing
-          </p>
-        </div>
-        <div class="read">Read More...</div>
-      </div>
-    </div>
-    <div class="grey-bottom"></div>
-  </div>
-  <div class="content-right">
-    <h3>Sidbar Links</h3>
-    <div class="grey-bottom"></div>
-    <div class="menu-y">
-      <ul>
-        <li><a href="">Link 1</a></li>
-        <li><a href="">Link 2</a></li>
-        <li><a href="">Link 3</a></li>
-        <li><a href="">Link 4</a></li>
-      </ul>
-    </div>
-    <h3>Other Widgets</h3>
-    <div class="grey-bottom"></div>
-    <div class="text">
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+<div class="container" >
+  <img  src="libs/images/background.jpg" alt="background">
+  <div class="content"  >
+    <div class="col_2">
+      <h2>What We Do</h2>
+      <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy</p>
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         Lorem Ipsum has been the industry's standard dummy
-        text ever since the 1500s, Lorem Ipsum is simply dummy text of the printing
-      </p>
+        text ever since the 1500s, Lorem Ipsum is simply dummy text of the printing</p>
+      <button type="submit" value="SellAction">Sell to action	<i class='fas fa-angle-double-right'></i></button>
+    </div>
+    <div class="col_1 ">
+      <h2>Contact Us  </h2>
 
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum has been the industry's standard dummy
-        text ever since the 1500s, Lorem Ipsum is simply dummy text of the printing
-      </p>
-
+      <p><b> Start Bootstrap</b></p>
+      <p>3481 Metros Place</p>
+      <p>Beverly Hills, CA 89424</p>
+      <p>P:(123)845-5486</p>
+      <p> E:<span class="blue"> name@example.com</span></p>
     </div>
   </div>
+  <footer>
+    <div class="col_1_bottom"></div>
+    <div class="col_1_bottom"></div>
+    <div class="col_1_bottom"></div>
+  </footer>
 </div>
-
-<footer>
-  <div class="text">Copyright<span class="read">YourSite.</span>All rights reserved.</div>
-</footer>
 </body>
 </html>
