--- a/SergeyNazaryan/index.html
+++ b/SergeyNazaryan/index.html
@@ -11,25 +11,40 @@
 		<div class="container">
 			<div class="content-header">
 				<div class="header-left">
+				  <img src="" alt="L">
 				</div>
 				<div class="header-right">
 					<div class="menu">
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
+							<li><a href="#">Home</a></li>
+							<li><a href="#">Home</a></li>
+							<li><a href="#">Home</a></li>
+							<li><a href="#">Home</a></li>
 						</ul>
 					</div>
 				</div>	
 			</div>
 			<div class="content-main-header">
-				<img src="" alt="">
+				<img src="" alt="Header_IMG">
 			</div>
 			<div class="content-main-content">
+			     <div class="content-header text-center">
+					About
+				</div>
 				<div class="relative-content">
-					<div class="inf">
+				    <div class="col-6">
+					    <div class="info">
+					        <p>Lorem Ispum jjhgsdfjkhfrgdjkg </p>
+					    </div>
 					</div>
+					<div class="col-6">
+				        <div class="info">
+					       <p>Lorem Ispum jjhgsdfjkhfrgdjkg </p>
+					    </div>
+					</div>
+
+
+					
 				</div>
 			</div>
 		</div>
