--- a/TamaraMargaryan/First_project/test/test/index.html
+++ b/TamaraMargaryan/First_project/test/test/index.html
@@ -9,7 +9,7 @@
     <title>Test</title>
     <link rel="stylesheet" type="text/css" href="libs/css/styles.css">
    
-</head>>
+</head>
 <body>
     <div class="container">
        <div class="container-content">
