--- a/LilitBotoyan/examen/index.html
+++ b/LilitBotoyan/examen/index.html
@@ -42,7 +42,7 @@
                         <div class="email"><div class="img"></div><input type="email" placeholder="Email Address"> </div>
                     </div>
                     <div class="row inputs">
-                        <input type="text" value="Message"  >
+                        <textarea  placeholder="Message"  rows="5" cols="50"></textarea>
                     </div>
                     <button type="button">Send</button>
                 </form>
