--- a/MargaritaMnatsakanyan/html/index.html
+++ b/MargaritaMnatsakanyan/html/index.html
@@ -28,7 +28,7 @@
                 <div class="items">
 				    <div class="item">
 					    <div class="item-content">
-						    <div class="item-content-text"
+						    <div class="item-content-text">
 							    <span class="fa fa-map"></span>
 								<span>Japan</span>
 							</div>
@@ -41,7 +41,7 @@
 					</div>
 					<div class="item">
 					    <div class="item-content">
-						    <div class="item-content-text"
+						    <div class="item-content-text">
 							    <span class="fa fa-map"></span>
 								<span>Japan</span>
 							</div>
@@ -54,7 +54,7 @@
 					</div>
 					<div class="item">
 					    <div class="item-content">
-						    <div class="item-content-text"
+						    <div class="item-content-text">
 							    <span class="fa fa-map"></span>
 								<span>Japan</span>
 							</div>
@@ -67,7 +67,7 @@
 					</div>
 					<div class="item">
 					    <div class="item-content">
-						    <div class="item-content-text"
+						    <div class="item-content-text">
 							    <span class="fa fa-map"></span>
 								<span>Japan</span>
 							</div>
