--- a/LilitBotoyan/form/index.html
+++ b/LilitBotoyan/form/index.html
@@ -40,10 +40,10 @@
                    <input type="file" id="image">
                </div>
                <div class="row-inputs"></div>
-               <div class="row-inputs">
-                   <label for="male">Male</label>
+               <div class="row-inputs-gender" >
+                   <label for="male"  class="gender">Male</label>
                    <input type="radio" id="male" name="gender">
-                   <label for="female">Female</label>
+                   <label for="female" class="gender">Female</label>
                    <input type="radio" id="female" name="gender">
                </div>
                <div class="row-inputs">
