--- a/TamaraMargaryan/Project_list/Form_New_Task/index.html
+++ b/TamaraMargaryan/Project_list/Form_New_Task/index.html
@@ -14,7 +14,7 @@
         <div class="form-container">
             <form action="output.html" method="get">
                 <div class="form-row">
-                    <label for="username">Username <span class="color-red" title="Mandatory">*</span></label>
+                    <label for="username" autofocus>Username <span class="color-red" title="Mandatory">*</span></label>
                     <input type="text" class="user-info" name="username" id="user-username" autofocus="autofocus" placeholder="Your username" required>
                 </div>
                 <div class="form-row">
