--- a/NellyHovhannisyan/Form-example/index.html
+++ b/NellyHovhannisyan/Form-example/index.html
@@ -28,8 +28,8 @@
                     <input type="email" placeholder="Email" name="Hair-color" id="email">
                 </div>
                 <div class="form-row">
-                    <label for="Hair-color"></label>
-                    <input type="text" placeholder="Hair-color" name="Hair-color" id="Hair-color">
+                    <label class="lab" for="Hair-color">Your hair color</label>
+                    <input type="color" name="Hair-color" id="Hair-color">
                 </div>
                 <div class="form-row">
                     <label for="age"></label>
