--- a/Artur/task_2/index.html
+++ b/Artur/task_2/index.html
@@ -13,7 +13,9 @@
             <!-- main-content -->
         <div class="main-content">
                 <!-- header -->
-            <header class="header content-center">
+            <header class="header">
+                    <!-- content-center -->
+                <div class="content-center">
                     <!-- header-menu -->
                <div  class="header-menu">
                        <div class="header-logo">
@@ -28,10 +30,10 @@
                            <li><a href="#">Prcing</a></li>
                            <li><a href="#">FAQ</a></li>
                            <li><a href="#">Get Started</a></li>
-                         </ul>
-                     </div><!--End header-nav-->
-                </div> <!--End header-menu-->
-                <!-- frist-view-block -->
+                          </ul>
+                      </div><!--End header-nav-->
+                  </div> <!--End header-menu-->
+                  <!-- frist-view-block -->
                <div class="frist-view-block">
                   <div class="text-block">
                       <h1>Flay makes you faster</h1>
@@ -43,18 +45,19 @@
                       </div>
                       <!-- form -->
                 <div class="form">
+                    <form action="test.php" >
                  <h2>Sing Up for Free</h2>
                   <div class="form-row">
-                    <label for="name">Full name</label>
+                     <label for="name">Full name</label>
                     <input type="text" id="name" placeholder="Full name" required>
                             </div>
                        <div class="form-row">
                          <label for="email_1">Email</label>
-                            <input type="email" id="email_1" placeholder="Email">
+                            <input type="email" id="email_1" placeholder="Email" required>
                                 </div>
                            <div class="form-row">
                               <label for="email_2">Email</label>
-                             <input type="email" id="email_2" placeholder="Email">
+                             <input type="email" id="email_2" placeholder="Email" required>
                                     </div>
                                     <div class="form-row">
                                         <select>
@@ -66,13 +69,34 @@
                                     <div class="button">
                                       <button type="submit">Register</button>
                                           </div>
-                                      </div><!--End form-->
+                                          </form>
+                                      </div><!--End form-->                               
                                    </div><!--End frist-view-block-->
-                             </div>
-                    </header> <!--End header-->
-                </div> <!--End main-content-->
-           </div> <!--End main-container-->
+                             </div><!--End content-center-->                             
+                        </header> <!--End header-->
+                   <!-- info-block-content -->
+                    <div class="info-block-content content-center">
+                            <div class="info-title">
+                                <h5>FEATURES</h5>
+                                <h2>App Features</h2>
+                                </div>
+                                <div class="info-block-item">
+                                       <span></span>
+                                       <h4>Minimal desing</h4>
+                                       <p>Far far away, behind the word</p>
+                                    </div>
+                                    <div class="info-block-item">
+                                            <span></span>
+                                            <h4>Fast Loading</h4>
+                                            <p>Far far away, behind the word</p>
+                                         </div>
+                               <div class="info-block-item">
+                                    <span></span>
+                                  <h4>Unlimited  Possible </h4>
+                                  <p>Far far away, behind the word</p>
+                                       </div>
+                    </div> <!--End info-block-content-->
+                </div><!--End main-content--> 
+           </div><!--End main-container-->   
     </body>
 </html>
-
-
