chenge fixed menu

--- a/LilitBotoyan/GraffPink/index.html
+++ b/LilitBotoyan/GraffPink/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="libs/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Palanquin:100&display=swap" rel="stylesheet">
 <body>
-  <div class="container">
+
     <header id="head">
     <div class="header_top">
         <div class="logo">
@@ -24,11 +24,13 @@
             <button class="red_button" type="submit"><img src="libs/img/log_user.psd"> Login</button>
         </nav>
     </div>
+    </header>
+    <div class="container">
         <div class="header_title">
            <h1>welcome to pink</h1>
             <h5>A multi purpose theme from cssautor.com</h5>
         </div>
-  </header>
+
     <div class="contant">
        <section id="about">
          <h2>Lorem Ipsum is simply dummy</h2>
@@ -117,10 +119,10 @@
             </tr>
         </table>
         <div class="social">
-            <div class="circle_small"><a href=""><img src="libs/img/Shape%202.png"></a></div>
-            <div class="circle_small"><a href=""><img src="libs/img/twitter.png"></a></div>
-            <div class="circle_small"><a href=""><img src="libs/img/dribbble.png"></a></div>
-            <div class="circle_small"><a href=""><img src="libs/img/share.png"></a></div>
+            <div class="circle_small"><i><a href=""><img src="libs/img/Shape%202.png"></a></i></div>
+            <div class="circle_small"><i><a href=""><img src="libs/img/twitter.png"></a></i></div>
+            <div class="circle_small"><i><a href=""><img src="libs/img/dribbble.png"></a></i></div>
+            <div class="circle_small"><i><a href=""><img src="libs/img/share.png"></a></i></div>
         </div>
         <p>Copyright &copy; 2009-2019 Cssauthor.com</p>
     </footer>
