--- a/TamaraMargaryan/Project_list/Multipurpose-webtemplate/index.html
+++ b/TamaraMargaryan/Project_list/Multipurpose-webtemplate/index.html
@@ -64,14 +64,14 @@
                 </div>
                 <div class="main-icons--item">
                     <div class="icon-div red">
-                        <img src="libs/img/beermug%20(Cheers!).png" alt="">
+                        <img src="libs/img/beermug.png" alt="">
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
                     </div>
                     <p>Beer</p>
                 </div>
                 <div class="main-icons--item">
                     <div class="icon-div orange">
-                        <img src="libs/img/iPad%20potrait%20&%20landscape%202.png" alt="">
+                        <img src="libs/img/iPad.png" alt="">
                     </div>
                     <p>Devices</p>
                 </div>
@@ -79,7 +79,7 @@
             <div class="main-info">
                 <div class="main-info--row">
                    <div class="img">
-                       <img src="/libs/img/Layer5.png" alt="">
+                       <img src="libs/img/Layer5.png" alt="">
                    </div>
                     <div class="text">
                         <h3>Lorem Ipsum is simply</h3>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="main-info--row">
                    <div class="img">
-                       <img src="/libs/img/Layer5.png" alt="">
+                       <img src="libs/img/Layer5.png" alt="">
                    </div>
                     <div class="text">
                         <h3>Lorem Ipsum is simply</h3>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="main-info--row">
                    <div class="img">
-                       <img src="/libs/img/Layer5.png" alt="">
+                       <img src="libs/img/Layer5.png" alt="">
                    </div>
                     <div class="text">
                         <h3>Lorem Ipsum is simply</h3>
@@ -155,22 +155,22 @@
                     <div class="social-icons">
                         <div class="social-icons--item">
                             <a href="https://www.facebook.com">
-                                <img src="/libs/img/Shape2.png" alt="">
+                                <img src="libs/img/Shape2.png" alt="">
                             </a>
                         </div>
                         <div class="social-icons--item">
                             <a href="https://www.twitter.com">
-                                <img src="/libs/img/twitter.png" alt="">
+                                <img src="libs/img/twitter.png" alt="">
                             </a>
                         </div>
                         <div class="social-icons--item">
                             <a href="#">
-                                <img src="/libs/img/dribbble.png" alt="">
+                                <img src="libs/img/dribbble.png" alt="">
                             </a>
                         </div>
                         <div class="social-icons--item">
                             <a href="#">
-                                <img src="/libs/img/share.png" alt="">
+                                <img src="libs/img/share.png" alt="">
                             </a>
                         </div>
                     </div>
