--- a/LilitBotoyan/lilit4/index.html
+++ b/LilitBotoyan/lilit4/index.html
@@ -30,19 +30,25 @@
              <h2>Projects </h2>
              <div class="items">
                  <div class="item">
-                     <img src="libs/img/polyangle.png" alt="">
+                     <div class="octangle">
+
+                     </div>
                      <h4>product1</h4>
                      <p>Lorem ipsum dolor.</p>
                      <p>lorem 1</p>
                  </div>
                  <div class="item">
-                     <img src="libs/img/polyangle.png" alt="">
+                     <div class="octangle">
+
+                     </div>
                      <h4>product1</h4>
                      <p>Lorem ipsum dolor.</p>
                      <p>lorem 1</p>
                  </div>
                  <div class="item">
-                     <img src="libs/img/polyangle.png" alt="">
+                     <div class="octangle">
+
+                     </div>
                      <h4>product1</h4>
                      <p>Lorem ipsum dolor.</p>
                      <p>lorem 1</p>
