--- a/Anahit/siimple/index.html
+++ b/Anahit/siimple/index.html
@@ -34,9 +34,9 @@
     <main>
     <div class="big_box">
 
-        <div class="projects" style="color: black;"><strong>Projects</strong></div>
+        <div class="header"><strong>Projects</strong></div>
       <div class="box">
-        <div class="block-left">
+        <div class="item">
             <div class="block-item">
                 <div class="icon">
                     <img src="libs/images/siimple.jpg" alt="icnon">
@@ -46,7 +46,7 @@
                     elements using <strong>siimple.</strong></div>
             </div>
         </div>
-        <div class="block-center">
+        <div class="item">
             <div class="block-item">
                 <div class="icon">
                     <img src="libs/images/siimple.jpg" alt="icnon">
@@ -56,7 +56,7 @@
                     classes for laying your project.</div>
             </div>
         </div>
-        <div class="block-right">
+        <div class="item">
             <div class="block-item">
                 <div class="icon">
                     <img src="libs/images/siimple.jpg" alt="icnon">
