--- a/Iskuhi/T_Iskuhi_6/index.html
+++ b/Iskuhi/T_Iskuhi_6/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link type="text/css" rel="stylesheet" href="libs/css/style.css">    
-    <title>Document</title>
+    <title>Iskuhi_6</title>
 </head>
 <body>
    <header>
